# otus_homework4

./: .gitignore  CMakeLists.txt  Doxyfile  annotated.html  classes.html  dir_000001_000000.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  globals.html  globals_func.html  globals_vars.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.map  inherit_graph_0.md5  inherit_graph_1.map  inherit_graph_1.md5  inherit_graph_2.map  inherit_graph_2.md5  inherits.html  main_8cpp.html  main_8cpp__incl.map  main_8cpp__incl.md5  menudata.js  namespacedetail.html  namespacemembers.html  namespacemembers_func.html  namespaces.html  print__ip_8hpp.html  print__ip_8hpp__dep__incl.map  print__ip_8hpp__dep__incl.md5  print__ip_8hpp__incl.map  print__ip_8hpp__incl.md5  print__ip_8hpp_source.html  structare__same.html  structare__same_3_01T_00_01U_00_01R_8_8_8_01_4.html  structare__same_3_01T_00_01U_00_01R_8_8_8_01_4__coll__graph.map  structare__same_3_01T_00_01U_00_01R_8_8_8_01_4__coll__graph.md5  (+14 more)
.github/workflows/: cmake-build-and-release.yml
include/: print_ip.hpp
search/: all_0.js  all_2.js  all_4.js  classes_0.js  classes_1.js  functions_1.js  searchdata.js  variables_0.js  variables_1.js
src/: main.cpp
